tests/algorithms/transpiler/Zig/data_structures/stacks/stack.zig
// Generated by Mochi Zig transpiler on 2025-08-24 22:16 +0700
const std = @import("std");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

const Stack = struct {
    items: []i64,
    limit: i64,
};

fn make_stack(limit: i64) Stack {
    return .{ .items = (&[_]i64{})[0..0], .limit = limit };
}

fn is_empty(s: Stack) bool {
    return @as(i64, @intCast(s.items.len)) == 0;
}

fn size(s_1: Stack) i64 {
    return @as(i64, @intCast(s_1.items.len));
}

fn is_full(s_2: Stack) bool {
    return @as(i64, @intCast(s_2.items.len)) >= s_2.limit;
}

fn push(s_param: *Stack, item: i64) void {
    if (is_full(s_param.*)) {
        @panic("stack overflow");
    }
    s_param.items = blk0: { var _tmp = std.ArrayList(i64).initCapacity(std.heap.page_allocator, 0) catch |err| handleError(err); _tmp.appendSlice(@as([]const i64, s_param.items)) catch |err| handleError(err); _tmp.append(item) catch |err| handleError(err); break :blk0 (_tmp.toOwnedSlice() catch |err| handleError(err)); };
}

fn pop(s_param_1: *Stack) i64 {
    if (is_empty(s_param_1.*)) {
        @panic("stack underflow");
    }
    const n: i64 = @as(i64, @intCast(s_param_1.items.len));
    const val: i64 = s_param_1.items[_idx(s_param_1.items.len, n -% 1)];
    s_param_1.items = s_param_1.items[@as(usize, @intCast(0))..@min(@as(usize, @intCast(n -% 1)), @as(usize, @intCast(s_param_1.items.len)))];
    return val;
}

fn peek(s_3: Stack) i64 {
    if (is_empty(s_3)) {
        @panic("peek from empty stack");
    }
    return s_3.items[_idx(s_3.items.len, @as(i64, @intCast(s_3.items.len)) -% 1)];
}

fn contains(s_4: Stack, item_1: i64) bool {
    var i: i64 = 0;
    i = i;
    while (i < @as(i64, @intCast(s_4.items.len))) {
        if (s_4.items[_idx(s_4.items.len, i)] == item_1) {
            return true;
        }
        i = i +% 1;
    }
    return false;
}

fn stack_repr(s_5: Stack) []const u8 {
    return _str(s_5.items);
}

fn mochi_main() void {
    var s_6: Stack = make_stack(5);
    s_6 = s_6;
    std.debug.print("{s}\n", .{_str(is_empty(s_6))});
    push(&s_6, 0);
    push(&s_6, 1);
    push(&s_6, 2);
    std.debug.print("{s}\n", .{_str(peek(s_6))});
    std.debug.print("{s}\n", .{_str(size(s_6))});
    std.debug.print("{s}\n", .{_str(is_full(s_6))});
    push(&s_6, 3);
    push(&s_6, 4);
    std.debug.print("{s}\n", .{_str(is_full(s_6))});
    std.debug.print("{s}\n", .{stack_repr(s_6)});
    std.debug.print("{s}\n", .{_str(pop(&s_6))});
    std.debug.print("{s}\n", .{_str(peek(s_6))});
    std.debug.print("{s}\n", .{_str(contains(s_6, 1))});
    std.debug.print("{s}\n", .{_str(contains(s_6, 9))});
}

pub fn main() void {
    {
        const __start = _now();
        const __start_mem: i64 = _mem();
        mochi_main();
        const __end = _now();
        const __end_mem: i64 = _mem();
        const __duration_us: i64 = @divTrunc(@as(i64, @intCast(__end - __start)), 1000);
        const __mem_diff: i64 = __end_mem - __start_mem;
        const __memory_bytes: i64 = if (__mem_diff < 0) -__mem_diff else __mem_diff;
        std.debug.print("{{\"duration_us\":{d},\"memory_bytes\":{d},\"name\":\"main\"}}\n", .{__duration_us, __memory_bytes});
    }
}

var _now_seed: i64 = 0;
var _now_seeded: bool = false;
fn _now() i64 {
    if (_now_seeded) {
        _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
        return _now_seed;
    }
    if (! _now_seeded) {
        if (std.process.getEnvVarOwned(std.heap.page_allocator, "MOCHI_NOW_SEED")) |env_seed| {
            defer std.heap.page_allocator.free(env_seed);
            if (std.fmt.parseInt(i64, env_seed, 10)) |v| {
                _now_seed = v;
                _now_seeded = true;
                _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
                return _now_seed;
            } else |_| {}
        } else |_| {}
    }
    return @as(i64, @intCast(std.time.nanoTimestamp()));
}

fn _idx(len: usize, i: i64) usize {
    return if (i < 0 or i >= @as(i64, @intCast(len))) 0 else @as(usize, @intCast(i));
}

fn _str(v: anytype) []const u8 {
    if (@TypeOf(v) == f64 or @TypeOf(v) == f32) {
        return std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v}) catch unreachable;
    }
    const info = @typeInfo(@TypeOf(v));
    switch (info) {
    .Pointer => |p| {
        if (p.size == .Slice) {
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.append('[') catch unreachable;
            for (v, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                const s = _str(e);
                out.appendSlice(s) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    .Struct => |_| {
        if (@hasDecl(@TypeOf(v), "iterator")) {
            const KVPair = struct{ ks: []const u8, vs: []const u8 };
            var pairs = std.ArrayList(KVPair).init(std.heap.page_allocator);
            defer pairs.deinit();
            var it = v.iterator();
            while (it.next()) |e| {
                const ks = _str(e.key_ptr.*);
                const vs = _str(e.value_ptr.*);
                pairs.append(.{ .ks = ks, .vs = vs }) catch unreachable;
            }
            std.sort.heap(KVPair, pairs.items, {}, struct {
                pub fn less(_: void, a: KVPair, b: KVPair) bool {
                    return std.mem.lessThan(u8, a.ks, b.ks);
                }
            }.less);
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.appendSlice("map[") catch unreachable;
            for (pairs.items, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                out.appendSlice(e.ks) catch unreachable;
                out.append(':') catch unreachable;
                out.appendSlice(e.vs) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    else => {},
    }
    return std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{v}) catch unreachable;
}

fn _mem() i64 {
    const path = "/proc/self/statm";
    var file = std.fs.openFileAbsolute(path, .{}) catch return 0;
    defer file.close();
    var buf: [64]u8 = undefined;
    const n = file.readAll(&buf) catch return 0;
    var it = std.mem.tokenizeScalar(u8, buf[0..n], ' ');
    _ = it.next(); // total program size
    if (it.next()) |tok| {
        const pages = std.fmt.parseInt(i64, tok, 10) catch return 0;
        return pages * @as(i64, @intCast(std.mem.page_size));
    }
    return 0;
}

fn _print(v: []const u8) void {
    std.debug.print("{s}\n", .{v});
}
